@@ -1,0 +1,4 @@
+from ctypes.test import load_tests
+import unittest
+
+unittest.main()
